--- a/hyprpm.toml
+++ b/hyprpm.toml
@@ -2,6 +2,11 @@
 name = "deco"
 authors = ["Treecase"]
 commit_pins = [
+    # Hyprland v0.51.1
+    [
+        "71a1216abcc7031776630a6d88f105605c4dc1c9",
+        "90e80e2d3d680b12e1b7f92d6d8ff18f7595bb90",
+    ],
     # Hyprland v0.51.0
     [
         "46174f78b374b6cea669c48880877a8bdcf7802f",
@@ -22,6 +27,7 @@ commit_pins = [
         "9958d297641b5c84dcff93f9039d80a5ad37ab00",
         "3b48702a3545fc9d03b96ee2025816e1db2d9ce6",
     ],
+    # [ <Hyprland hash>, <deco hash> ]
 ]
 
 [deco]
